Changed "transaction info" resource
